# multirobot_auction_tasks

./: CMakeLists.txt  README.md  package.xml  report.md  setup.py
action/: TaskAllocated.action
launch/: multirobot_auction_tasks_gazebo.launch
nodes/: auctionee  auctioneer  multirobot_auction_tasks_tf_broadcaster  static_multirobot_auction_tasks_tf_broadcaster
srv/: BiddingService.srv
