<?xml version="1.0"?>
<package format="2">
  <name>multirobot_auction_tasks</name>
  <version>0.1.0</version>
  <description>The multirobot_auction_tasks package</description>
  <maintainer email="anmol.chachra.gr@dartmouth.edu">Anmol Chachra</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>a
</package>
